# cpp-project-template

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile.in  conanfile.py
.github/workflows/: ci.yml
app/: main.cpp  threadPool_comp.cpp
cmake/: Conan.cmake  Documentation.cmake
include/: example.h  threadPool.h
src/: example.cpp  threadPool.cpp
tests/: CMakeLists.txt  dummy.cpp
